# Coconut

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  SDL_Game.sln  SDL_test.sln  imgui.ini  main.cpp  premake5.lua  tempCodeRunnerFile  tempCodeRunnerFile.cpp
Car/: CMakeLists.txt
Car/src/: Car.cpp  Car.h  Game.cpp  Game.h  Tile.cpp  Tile.h  main.cpp
Coconut/: CMakeLists.txt
Coconut/assets/: BACKGROUND.yaml  CAR.yaml  PIG.yaml
Coconut/src/: Camera.cpp  Coconut.h  Entity.h  Log.h  MouseEvent.cpp  Scene.cpp  Scene.h
Coconut/src/Core/: Assert.h  Camera.cpp  Camera.h  GameContactListener.h  GameContext.cpp  GameContext.h  Log.cpp  Math.h  PhysicsInfo.h  Serializer.h  Settings.cpp  Settings.h  TextureManager.cpp  TextureManager.h
Coconut/src/DebugObjects/: Box.cpp  Box.h  Car.cpp  Car.h  Edge.cpp
Coconut/src/ECS/: Body.h  BodyComponent.h  Components.h  Entity.h  HealthComponent.h  Sprite.cpp  Sprite.h  SpriteComponent.cpp  SpriteComponent.h  TransfromComponent.h
Coconut/src/Entity/: Entity.h
Coconut/src/Event/: KeyboardEvent.h  MouseEvent.cpp
Coconut/src/Render/: DebugDraw.cpp  DebugDraw.h  HealthBar.h  QuadWrite.cpp  QuadWrite.h  SpriteLoader.cpp  SpriteLoader.h
Coconut/src/UI/: ExampleLayer.h  Layer.h  PhysicsInfoLayer.cpp  PhysicsInfoLayer.h  WindowSettingsLayer.h
Coconut/src/util/: YamlReader.h  imgui_include.h  sdl_check.h  sdl_delete.h
Coconut/unitTest/: CMakeLists.txt  test_entity.cpp
CoconutEngine/: CMakeLists.txt  CoconutEngine.vcxproj  CoconutEngine.vcxproj.filters
CoconutEngine/CoconutEngine.xcodeproj/: project.pbxproj
CoconutEngine/CoconutEngine.xcodeproj/xcuserdata/kionmiyasaka.xcuserdatad/xcschemes/: xcschememanagement.plist
CoconutEngine/src/: Coconut.h  Core.h  Game.cpp  Game.h  Log.cpp  Log.h
CoconutEngine/src/Coconut/: Application.cpp  Application.h  Collision.cpp  Collision.h  Compoent.h  ConstantSpec.h  Core.h  ECS.h  EntryPoint.h  Game.cpp  Game.h  ImgManager.h  Log.cpp  Log.h  MetricConverter.h  Object.cpp  Object.h  Rect.cpp  Rect.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h
CoconutEngine/src/Coconut/ECS/: AllComponents.h  BodyComponent.h  ColliderComponent.h  Compoent.h  ECS.h  KeyBoardController.h  PositionComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
CoconutEngine/src/Coconut/ECS/essentials/: ALLECS.h  Component.h  ECS.h  Entity.h  Manager.h
CoconutEngine/src/Coconut/GameMap/: Map.cpp  Map.h  MapTweaker.cpp  MapTweaker.h
GameDemo/: CMakeLists.txt
GameDemo/src/: Application.cpp  Application.h  Game.cpp  Game.h  Player.h  TheoJansen.cpp  TheoJansen.h  main.cpp
LevelEditor/: CMakeLists.txt
LevelEditor/src/: Application.cpp  Application.h  EntryPoint.cpp  Player.h  main.cpp
SDL_Game.xcworkspace/: contents.xcworkspacedata
SDL_Game.xcworkspace/xcuserdata/kionmiyasaka.xcuserdatad/: UserInterfaceState.xcuserstate
SDL_test/: CMakeLists.txt  SDL_test.vcxproj  SDL_test.vcxproj.filters
SDL_test/SDL_test.xcodeproj/: project.pbxproj
SDL_test/SDL_test.xcodeproj/xcuserdata/kionmiyasaka.xcuserdatad/xcschemes/: xcschememanagement.plist
SDL_test/src/: EntryPoint.h  main.cpp
assets/: TEST_BOX.yaml
bin-int/Debug-windows-x86_64/CoconutEngine/: Application.nativecodeanalysis.sarif  CodeAnalysisResultManifest.txt  Game.nativecodeanalysis.sarif  Game.nativecodeanalysis.xml  Log.nativecodeanalysis.sarif  Map.nativecodeanalysis.sarif  MapTweaker.nativecodeanalysis.sarif  MapTweaker.nativecodeanalysis.xml  Object.nativecodeanalysis.sarif  Object.nativecodeanalysis.xml  TextureManager.nativecodeanalysis.sarif  TextureManager.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc143.idb
bin-int/Debug-windows-x86_64/SDL_test/: SDL_test.exe.recipe  main.new.obj.enc  vc143.idb
src/: Application.cpp  Application.h  Box.cpp  Box.h  Camera.cpp  Camera.h  Car.cpp  Car.h  Circle.cpp  Circle.h  Constants.h  DebugDraw.cpp  DebugDraw.h  Edge.cpp  Edge.h  Entity.h  Log.cpp  Log.h  MetricConverter.h  MouseEvent.cpp  MouseEvent.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Utils.h  imgui.ini  main-legacy.cpp  main.cpp  tmp.cpp
src/DebugObjects/: Box.cpp  Car.cpp  Edge.cpp  Edge.h
src/ECS/: Entity.h
